2006-03-06  Derek Price  <derek@ximbiot.com>

	* sanity.sh (death-rtag): New test.
	(Original report from C. Michael Pilato <cmpilato@collab.net>.)

2006-03-01  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Set MALLOC_CHECK_ in hopes of exposing common memory
	errors when CVS is linked with glibc 2.x.

2006-02-27  Derek Price  <derek@ximbiot.com>

	* lock.c (internal_lock): Back out previous change, we don't change
	user visible output on stable unless absolutely necessary.

	* lock.c (internal_lock): Improve error message.

2006-02-26  Derek Price  <derek@ximbiot.com>

	* client.c (call_in_directory): Remove unneeded code.
	* sanity.sh (toplevel-12): Compensate by failing to expect a redundant
	error message.

2006-02-24  Mark D. Baushke  <mdb@gnu.org>

	* client.c (gzip_level): Move to...
	* main.c (gzip_level): ...here.
	(main): Revert previous change in '-z' argument processing and
	remove CLIENT_SUPPORT ifdef/endif.
	* sanity.h (crerepos-6a): Deal with --disable-client output.

	* main.c (main): Validate the gzip compression level for
	--disable-client configurations.

2006-02-13  Derek Price  <derek@ximbiot.com>

	* server.c (do_cvs_command): Skip server_cleanup in the child process.

	* sanity.sh (sshstdio-6): Rewrite using more portable sed script.

2006-02-02  Derek Price  <derek@ximbiot.com>

	* sanity.sh (sshstdio): Attempt to ignore spurious SSH output.

	* main.c (main), release.c (release), server.c (do_cvs_command): Always
	call the cleanup hooks before exit.

2006-02-01  Derek Price  <derek@ximbiot.com>

	* tag.c (add_to_val_tags): When a tag turns out to exist in the db when
	it isn't expected, release the lock.

	* history.c (save_user, save_file, save_mod, read_hrecs): Avoid
	overflow.

2006-01-30  Derek Price  <derek@ximbiot.com>

	* server.c (do_cvs_command): Set flow control pipe to blocking mode
	before waiting for it to close.
	(set_block_fd): New function.
	(Original patch from Garrett Rooney <grooney@collab.net>.)
