@@ -1,5 +1,7 @@
 2006-03-06  Derek Price  <derek@ximbiot.com>
 
+	* tag.c (rtag_proc): Always search in the attic when -r is used.
+
 	* sanity.sh (death-rtag): New test.
 	(Original report from C. Michael Pilato <cmpilato@collab.net>.)
 
